fix: align giphy container (#945)
* fix: align giphy container

* feat: adjust height of giphy container slightly

--- a/src/components/message-input/giphy/styles.scss
+++ b/src/components/message-input/giphy/styles.scss
@@ -3,8 +3,8 @@
 .giphy__container {
   width: 500px;
   position: absolute;
-  bottom: 65px;
-  right: 74px;
+  bottom: 64px;
+  left: 169px;
   background-color: themeDeprecated.$background-color-tertiary;
   padding: 5px;
   border-radius: 5px;
@@ -12,7 +12,7 @@
   z-index: 12;
 
   &--fullscreen {
-    right: 65px;
+    left: 374px;
   }
 
   &-grid {
